--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,9 +3,9 @@ project:
   output-dir: docs
 
 book:
-  title: "Armein Z. R. Langi"
-  subtitle: "Portfolio Asesmen II-2100 KIPP"
-  author: "131902360 Armein Z R Langi"
+  title: "Muhammad Azikra Wira Pratama"
+  subtitle: "Tugas UTS Komunikasi Interpersonal dan Publik"
+  author: "18224089 Muhammad Azikra Wira Pratama"
   date: "9/15/2025"
   chapters:
     - index.qmd
