--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,9 +4,9 @@ project:
 
 book:
   title: "Muhammad Azikra Wira Pratama"
-  subtitle: "Tugas UTS Komunikasi Interpersonal dan Publik"
+  subtitle: "Tugas Portofolio Komunikasi Interpersonal dan Publik"
   author: "18224089 Muhammad Azikra Wira Pratama"
-  date: "10/10/2025"
+  date: "10/5/2025"
   chapters:
     - index.qmd
     - intro.qmd
